# kafql

./: .gitignore  Cargo.toml  Dockerfile  README.md  about.toml  compose.yaml  integration.bats  justfile  start-local.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: api.md  overview.md  usage.md
kafql-store/: Cargo.toml
kafql-store/src/: api.rs  consumer.rs  main.rs  store.rs
kafql-store/tests/: integration.rs
