[package]
name = "kafql-store"
version = "0.1.0"
edition = "2021"
description = "An in-memory Kafka consumer with CRUD API support"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dashmap = "5.5"  # Thread-safe concurrent HashMap
clap = { version = "4.5", features = ["derive", "env"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
thiserror = "2.0"
hyper = "1" 